<resources>
    <string name="app_name">Wacky Blackjack</string>
    <string name="play_game_button">Play Game</string>
    <string name="options">Options</string>
    <string name="running_count">0</string>
    <string name="zero_count">0</string>
    <string name="hit_card">Hit</string>
    <string name="stand_card">Stand</string>
    <string name="new_card_id">newID</string>
    <string name="dealer_running_count">0</string>
    <string name="sabotage_dealer_count">%1$d + %2$d</string>
    <string name="incineration_player_count">%1$d - %2$d</string>
    <string name="win_string">WIN</string>
    <string name="lose_string">LOSE</string>
    <string name="tie_string">TIE</string>
    <string name="htp">How to Play</string>
    <string name="app_info">App Info</string>

    <string name="about_string">About:</string>
    <string name="about_content">
        This game is a blackjack variant that provides the player with power-ups to balance against
        the implicit edge of the dealer. An explanation of each power-up can be found in
        the "How to Play" section. I hope you have fun playing the game!
    </string>
    <string name="attribution_content">
        Most code in this app is original work, and the rest is adapted from Stack Overflow links or the Android docs.
        All artwork in this app, except the app icon, is used without modification with either explicit permission or a Creative Commons license. The app icon is adapted from one of the images below.\n\n
        Title screen joker: drawsgood, itch.io\n https://drawsgood.itch.io/8bit-deck-card-assets (permission)\n\n
        Playing cards: George Blackwell, itch.io\n https://georgeblackwell.itch.io/playing-cards-sprite-pack\ (Creative Commons Attribution v4.0)\n\n
        Poker chips: mehrasaur, OpenGameArt\n https://opengameart.org/content/playing-card-\nassets-52-cards-deck-chips (CC0 1.0)\n\n
        Powerup icons: pbarry, itch.io\n https://pbarry.itch.io/ability-icons (permission)
    </string>

    <string name="how_to_play_title">
        How to Play:
    </string>

    <string name="how_to_play_blackjack">
        Get as close to 21 as possible. Don\'t go over, or you lose!
    </string>

    <string name="clairvoyance_str">
        Foresee the dealer\'s hand \nbefore you finish your turn. \nThen end whenever you\'d like!
    </string>
    <string name="sabotage_str">
        Add a random value (0 to 4)\nto the dealer\'s running count. \nHopefully the dealer busts!
    </string>
    <string name="incineration_str">
        Throw away the last card if you bust. \nThink of this as a chance \nto take all the cards you\'d like!
    </string>
    <string name="transmutation_str">
        Change your first two cards. \nBe careful - you can only swap \nbefore you hit or stand!
    </string>
    <string name="joker_str">
        Change your first two cards. \nYou can swap them after \nyou take more cards, \nbut you might just bust…
    </string>

    <string name="attribution_string">Attributions:</string>
    <string name="attribution_header"></string>
    <string name="app_subtitle">A Blackjack Variant</string>

    <string name="playerCard1Content">Player card 1</string>
    <string name="playerCard2Content">Player card 2</string>
    <string name="cardStackContent">Card stack</string>
    <string name="powerupButton">Power-up button</string>
    <string name="powerupContent">Power-up</string>

    <string name="clairvoyanceContent">Clairvoyance</string>
    <string name="sabotageContent">Sabotage</string>
    <string name="incinerationContent">Incineration</string>
    <string name="transmutationContent">Transmutation</string>
    <string name="jokerContent">Joker</string>

    <string name="redJokerImg">Red joker image</string>
</resources>